@@ -44,7 +44,14 @@ enum TimedEvents
     EVENT_UPDATE_EXECUTION_TIME = 1,
     EVENT_QUAKE_SHATTER         = 2,
     EVENT_REBUILD_PLATFORM      = 3,
+    EVENT_CHECK_HERO_ACHIEVEMENT = 4,
 };
+
+enum RequiredAchievementsForHeroic
+{
+    ACHIEVEMENT_FROZEN_THRONE_10 = 4530,
+    ACHIEVEMENT_FROZEN_THRONE_25 = 4597,
+}; 
 
 DoorData const doorData[] =
 {
@@ -183,7 +190,10 @@ class instance_icecrown_citadel : public InstanceMapScript
             {
                 if (!TeamInInstance)
                     TeamInInstance = player->GetTeam();
-					PrepareGunshipEvent(player); // Spawn Gunship Event
+                    PrepareGunshipEvent(player); // Spawn Gunship Event
+
+                if (instance->IsHeroic())
+                    Events.ScheduleEvent(EVENT_CHECK_HERO_ACHIEVEMENT, 10000);
             }
 
             void OnCreatureCreate(Creature* creature)
@@ -1189,6 +1199,20 @@ class instance_icecrown_citadel : public InstanceMapScript
                 }
             }
 
+            bool CheckHeroicAchievement(uint32 mode)
+            {
+                Map::PlayerList const &players = instance->GetPlayers();
+                for(Map::PlayerList::const_iterator itr = players.begin(); itr != players.end(); ++itr)
+                {
+                    Player* player = itr->getSource();
+                    if (player->isGameMaster())
+                        continue;
+                    if (player->HasAchieved(mode == 25 ? ACHIEVEMENT_FROZEN_THRONE_25 : ACHIEVEMENT_FROZEN_THRONE_10))
+                        return true;
+                }
+                return false;
+            } 
+
             std::string GetSaveData()
             {
                 OUT_SAVE_INST_DATA;
@@ -1254,6 +1278,16 @@ class instance_icecrown_citadel : public InstanceMapScript
                 {
                     switch (eventId)
                     {
+                        case EVENT_CHECK_HERO_ACHIEVEMENT:
+                            if (!CheckHeroicAchievement(instance->ToInstanceMap()->GetMaxPlayers()))
+                            {
+                                Map::PlayerList const &players = instance->GetPlayers();
+                                for(Map::PlayerList::const_iterator itr = players.begin(); itr != players.end(); ++itr)
+                                    if (Player* player = itr->getSource())
+                                        player->RepopAtGraveyard();
+                            }
+                            Events.ScheduleEvent(EVENT_CHECK_HERO_ACHIEVEMENT, 10000);
+                            break;
                         case EVENT_UPDATE_EXECUTION_TIME:
                         {
                             --BloodQuickeningMinutes;
