@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[196] --> Implement [ICC] Check Heroic Achievement.
 [195] --> Implement Trial of the Champion. (Thx fiveofeight)
 [194] --> Update scripts and core... Original TrinityCore and Chaos Core.
 [193] --> Update Naxxramas. (Thx Shaco)
